# misc

config/: README.md  config  gnome_terminal_settings.txt  screenshot.sh
graphics/opengltest/: CMakeLists.txt
graphics/opengltest/assets/shaders/: default_vert.vert
graphics/opengltest/include/: camera.h  cube.h  loop.h  setup.h  shader.h
graphics/opengltest/lib/glad/include/glad/: glad.h
graphics/opengltest/lib/glad/src/: glad.c
graphics/opengltest/src/: camera.c  cube.c  loop.c  main.c  setup.c  shader.c
graphics/threecraft/: .gitattributes  README.md  index.html  package-lock.json  package.json
graphics/threecraft/src/: blocks.js  main.js  settings.js
graphics/via-gebra/: CMakeLists.txt  imgui.ini
graphics/via-gebra/examples/: examples.lua
graphics/via-gebra/include/: drawfunc.h  gui.h  luaApi.h  main.h
graphics/via-gebra/src/: drawfunc.cpp  gui.cpp  input.cpp  luaApi.cpp  main.cpp
minecraft/mods/fly/: README.md  gradle.properties
minecraft/mods/full-hack/: .gitignore  README.md  build.gradle  gradle.properties  run.sh
minecraft/servers/minecraft-clasa/: run.bat  server.properties
minecraft/servers/vanilla-anticheat/: run.bat  server.properties
unity/games/one-slice/: README.md
unity/scripts/unity-fps-player-controller/: PlayerAnimations.cs  PlayerController.cs
unity/scripts/unity-top-down-shooter/: AmmoCounter.cs  Bandage.cs  Bullet.cs  BulletDamage.cs  Crate.cs  Enemy.cs  EnemyDamage.cs  Entity.cs  GameManager.cs  HealthBar.cs  Inventory.cs  Player.cs  ReloadTimer.cs  SMG.cs  Shotgun.cs  TileRandomizer.cs  Weapon.cs
web/chess/client/: angular.json  package-lock.json  package.json
web/chess/server/: go.mod  go.sum  main.go
web/starter-projects/messages-app/: appsettings.json
web/starter-projects/pokemon-web/: index.html  program.js  style.css
web/starter-projects/threads-app/: Program.cs  appsettings.json  threads-app.csproj
(+277 files in other folders)
